# cli

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build.yml
src/: api.rs  config.rs  init.rs  login.rs  main.rs  pack.rs  publish.rs  solution.rs  structs.rs  utils.rs
src/commands/: build.rs  login.rs  mod.rs  new.rs  publish.rs
src/helpers/: forge_generator.rs  mod.rs
