[package]
name = "modbloq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.3.10" , features = ["derive"]}
bytes = "1"
serde = {version = "1.0", features = ["derive"]}
serde_bytes = "0.11"
xz2 = "0.1.7"
serde_json = "1.0.99"
bincode = "1.3.3"
forge-lib = {git = "https://github.com/beat-forge/lib", branch = "main"}
simple-error = "0.3.0"
minreq = { version = "2.8.1", features = ["https-rustls"] }
indicatif = "0.17.5"
slug = "0.1.4"
semver = "1.0.17"
