[package]
name = "beatforge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true
opt-level = "z"
strip = true
codegen-units = 1
panic = "abort"

[dependencies]
clap = { version = "4.4.5", features = ["derive"] }
bytes = "1"
serde = {version = "1.0", features = ["derive"]}
serde_bytes = "0.11"
xz2 = "0.1.7"
serde_json = "1.0.107"
bincode = "1.3.3"
forge-lib = {git = "https://github.com/beat-forge/lib", branch = "main"}
simple-error = "0.3.0"
minreq = { version = "2.8.1", features = ["https-rustls", "json-using-serde"] }
indicatif = "0.17.7"
slug = "0.1.4"
regex = "1.9.5"
semver = "1.0.19"
inquire = "0.6.2"
clap_complete = "4.4.2"
anyhow = "1.0.75"
directories = "5.0.1"
chrono = { version = "0.4.31", features = ["serde"] }
uuid = { version = "1.4.1", features = ["v4"] }
convert_case = "0.6.0"
